# django-react-websockets-sample

./: Dockerfile  README.md  dev-requirements.txt  docker-compose.yml  local.yml  makefile  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/apps/account/: admin.py  enums.py  managers.py  models.py  urls.py  views.py
backend/apps/account/locale/pt_BR/LC_MESSAGES/: django.po
backend/apps/account/migrations/: 0001_initial.py
backend/apps/server/: admin.py  exceptions.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/server/locale/pt_BR/LC_MESSAGES/: django.po
backend/apps/server/migrations/: 0001_initial.py  0002_server_icon.py  0003_server_banner.py
backend/apps/server/utils/: schema.py  upload.py  validators.py
backend/dev_resources/: Dockerfile  dev-requirements.txt
backend/dev_resources/fixtures/: auth.json  categories.json  channels.json  servers.json
backend/dev_resources/fixtures/account/: accounts.json  auth.json
backend/dev_resources/fixtures/server/: categories.json  channels.json  servers.json
backend/djmeet/: settings.py  urls.py
backend/shared/: exceptions.py
base/: manage.py
base/account/: urls.py
base/djmeet/: asgi.py  settings.py  urls.py  wsgi.py
base/server/: admin.py  filters.py  schema.py  urls.py
contrib/: backend-env-sample  env-sample  frontend-env-sample
frontend/: .env  .gitignore  entrypoint.sh  package-lock.json  package.json  tsconfig.json
frontend/dev_resources/: Dockerfile
(+34 files in other folders)
